@@ -1,6 +1,7 @@
 package Goose;
 
 import Goose.Events.LoginEvent;
+import Goose.concurrent.SocketExecutor;
 import org.apache.commons.codec.Charsets;
 
 import java.net.InetAddress;
@@ -66,42 +67,9 @@ public class GameServer extends Thread{
      */
     public void gameLoop() throws Exception {
         long lastPlayerCount = System.currentTimeMillis();
-        Thread serverThread = new Thread(new ServerSocketHandler(this.listen, this));
-        serverThread.start();
-        long last = System.nanoTime();
+        Thread.ofVirtual().start(new ServerSocketHandler(this.listen, this));
         while (this.gameworld.getRunning()) {
             long start = System.currentTimeMillis();
-            for (int i = 0; i < sockets.size(); i++) {
-                Socket socket = sockets.get(i);
-
-                byte[] buffer = new byte[512];
-                int res = 0;
-                try {
-                    // socket.setSoTimeout(2);
-                    if (socket.getInputStream().available() != 0) {
-                        socket.setReceiveBufferSize(512);
-                        res = socket.getInputStream().read(buffer);
-
-                        if (res <= 0) {
-                            this.gameworld.lostConnection(socket);
-                        } else {
-                            String strBuffer = new String(buffer, 0, res, Charsets.US_ASCII);
-                            this.gameworld.received(socket, strBuffer);
-                        }
-                    } else {
-                        // This seems to happen when someone is alt tabbed maybe?
-                        //TODO - Try removing this to see what is happening here.
-                        if (System.nanoTime() - last > GameSettings.getDefault().getLogoutLagTime() * 1_000_000_000) {
-                            String ping = "PING" + "\u0001";
-                            socket.getOutputStream().write(ping.getBytes());
-                            last = System.nanoTime();
-                        }
-
-                    }
-                } catch (java.net.SocketException e) { // this is called when client host closes aspereta.
-                    this.gameworld.lostConnection(socket);
-                }
-            }
             //TODO - This should not be needed but for some reason events are still being added even when players are not on the game. Need to fix this and remove the manual LoginEvent code
             if(this.gameworld.getPlayerHandler().getPlayerCount() > 0) {
                 this.gameworld.update();
@@ -145,7 +113,7 @@ public class GameServer extends Thread{
                 try {
                     Socket clientSocket = listen.accept();
                     gameServer.gameworld.newConnection(clientSocket);
-                    gameServer.sockets.add(clientSocket);
+                    Thread.ofVirtual().start(new SocketExecutor(clientSocket, gameworld));
                 } catch (Exception e) {
                     Logger.INSTANCE.println(e);
                 }
